--- a/www/skins/prod/959595/prodcolor.css
+++ b/www/skins/prod/959595/prodcolor.css
@@ -221,7 +221,7 @@ span.ww_winTitle {
     height: 52px;
     display: inline-block;
     background-color: #999999;
-    z-index: 0;
+    z-index: 10;
 }
 
 #idFrameC .ui-tabs .ui-tabs-nav li.ui-tabs-selected {
